# packmule

./: .gitignore  pyproject.toml
packmule/: __init__.py  errors.py  pkg.py
packmule/managers/: xbps.py
tests/: test_xbps_installed.py
