[tool.poetry]
name = "packmule"
version = "0.1.0"
description = "A manager for your package manager"
authors = ["Jasper Chan <jasperchan515@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
xdg = "^4.0"
pint = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
